--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/passport": "^1.0.7",
         "bcrypt": "^5.0.1",
         "class-validator": "^0.13.1",
+        "cookie-parser": "^1.4.5",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
@@ -48,6 +49,8 @@
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/cookie": "^0.4.1",
+        "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.13",
         "@types/jest": "^26.0.24",
         "@types/node": "^16.0.0",
