setted up all routes for the barebone post site

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 TYPE=mysql
-HOST=shareddb-t.hosting.stackcp.net
-DATABASE=market-313331b86d
-USERNAME=market-313331b86d
-PASSWORD=c57r[gLQuL.X
+HOST=localhost
+DATABASE=market
+USERNAME=root
+PASSWORD=123Qu@tre
 PORT=3306
 SECRETKEY=secret
 EXPIRESIN=24h
