added image upload

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ PASSWORD=123Qu@tre
 PORT=3306
 SECRETKEY=secret
 EXPIRESIN=24h
+AWS_ACCESS_KEY_ID=D737PTJAX7XYZP5HMPK2
+AWS_SECRET_ACCESS_KEY=zslfxqmg9ijkd+NVHuLRiSNOUNXREhUnIQ3xTPUxy1E
+AWS_REGION=fra1
+AWS_BUCKET=iphone-flipping
