--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
         "@nestjs/typeorm": "^8.0.2",
         "@types/bcrypt": "^5.0.0",
         "@types/passport": "^1.0.7",
+        "aws-sdk": "^2.969.0",
         "bcrypt": "^5.0.1",
         "class-validator": "^0.13.1",
         "cookie-parser": "^1.4.5",
+        "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.3",
+        "multer-s3": "^2.9.0",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
         "passport": "^0.4.1",
