restored project from backup and added some more route and functions

--- a/.env
+++ b/.env
@@ -4,9 +4,20 @@ DATABASE=market
 USERNAME=root
 PASSWORD=123Qu@tre
 PORT=3306
+
 SECRETKEY=secret
 EXPIRESIN=24h
-AWS_ACCESS_KEY_ID=D737PTJAX7XYZP5HMPK2
-AWS_SECRET_ACCESS_KEY=zslfxqmg9ijkd+NVHuLRiSNOUNXREhUnIQ3xTPUxy1E
-AWS_REGION=fra1
-AWS_BUCKET=iphone-flipping
+
+DO_ACCESS_KEY_ID=D737PTJAX7XYZP5HMPK2
+DO_SECRET_ACCESS_KEY=zslfxqmg9ijkd+NVHuLRiSNOUNXREhUnIQ3xTPUxy1E
+DO_REGION=fra1
+DO_BUCKET=iphone-flipping
+
+AWS_ACCESS_KEY_ID=AKIAUZGOQWJDWPTGZJWN
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
+AWS_DOMAIN=iphoneflipping.com
+
+SMTP_USER=ses-smtp-user.20210820-221926
+SMTP_USERNAME=AKIAUZGOQWJDUIHLM75P
+SMTP_PASSWORD=BGbLJX/Ph0mu6byEWcXyMFuvglq0oKx9JpBMR3CocMa2
