--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^8.0.1",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/platform-socket.io": "^8.0.6",
         "@nestjs/typeorm": "^8.0.2",
+        "@nestjs/websockets": "^8.0.6",
         "@types/bcrypt": "^5.0.0",
         "@types/passport": "^1.0.7",
         "aws-sdk": "^2.969.0",
@@ -36,17 +38,21 @@
         "class-validator": "^0.13.1",
         "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
+        "html2plaintext": "^2.1.2",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.3",
         "multer-s3": "^2.9.0",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.0",
+        "nodemailer": "^6.6.3",
+        "nodemailer-ses-transport": "^1.5.1",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
-        "typeorm": "^0.2.36",
+        "socket.io": "^4.1.3",
+        "typeorm": "^0.2.37",
         "typescript-class-validator": "0.0.6"
     },
     "devDependencies": {
@@ -60,6 +66,7 @@
         "@types/node": "^16.0.0",
         "@types/passport-jwt": "^3.0.6",
         "@types/supertest": "^2.0.11",
+        "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
         "eslint": "^7.30.0",
