--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "socket.io": "^4.1.3",
+        "twilio": "^3.67.1",
         "typeorm": "^0.2.37",
         "typescript-class-validator": "0.0.6"
     },
